Release Notes
=============

This document collects changes on a release to release base. For open known issues, please refer to
the bug database on sourceforge. 



Version 0.2
-----------

This version addresses the following issues:

863630 - Backface culling missing
863633 - Culling and clipping is missing 
863632 - Initialization for multiple processes 


Version 0.1
-----------

This is an initial release of the compiled library. Known issues logged into the bug database.