@@ -184,7 +184,7 @@ inline OGLES_API EGL_Fixed EGL_Mul(EGL_Fixed a, EGL_Fixed b) {
 //	b			-	divisor
 // --------------------------------------------------------------------------
 inline OGLES_API EGL_Fixed EGL_Div(EGL_Fixed a, EGL_Fixed b) {
-	return static_cast<EGL_Fixed>((static_cast<I64>(a) << EGL_PRECISION) / b);
+	return EGL_FixedFromFloat(EGL_FloatFromFixed(a) / EGL_FloatFromFixed(b));
 }
 
 
